# routes/index.js
@@ -1,6 +1,7 @@
 const express = require('express');
 var router = express.Router();
 
+router.use('/users', require('./users'));
 router.use('/characters', require('./characters'));
 router.use('/items', require('./items'));
 router.use('/api-docs', require('./swagger'));
