# routes/users.js
@@ -1,0 +1,15 @@
+const express = require('express');
+var router = express.Router();
+const userController = require('../controllers/user');
+
+router.get('/', userController.getAll);
+
+router.get('/:id', userController.getSingle);
+
+router.post('/', userController.createUser);
+
+router.put('/:id', userController.updateUser);
+
+router.delete('/:id', userController.deleteUser);
+
+module.exports = router;
